[metadata]
name = example-package-GREGASHTON
version = 0.0.1
author = Ciar Moore-Saxton
author_email = zhap019@live.rhul.ac.uk
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ciarms/PH3010_Advanced_Python_ciar
project_urls =
    Bug Tracker = https://github.com/ciarms/PH3010_Advanced_Python_ciar/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    add_one = example_package.command_line_interface:main
